# ctptrader

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
ctptrader/: CMakeLists.txt  ctptrader.cpp  main.cpp
ctptrader/app/: CMakeLists.txt  ctpMG.cpp  ctpMG.hpp  ctpTG.cpp  ctpTG.hpp  market.cpp  market.hpp  sim.cpp  sim.hpp  stgManager.cpp  stgManager.hpp  strategy.cpp  strategy.hpp  trade.cpp  trade.hpp
ctptrader/base/: CMakeLists.txt  context.cpp  context.hpp  date.cpp  date.hpp  date_t.cpp  def.cpp  def.hpp  msg.cpp  msg.hpp  ref.cpp  ref.hpp  stg.cpp  stg.hpp  timestamp.cpp  timestamp.hpp  timestamp_t.cpp
ctptrader/core/: CMakeLists.txt  app.cpp  app.hpp  buf_center.cpp  buf_center.hpp  ctx.cpp  ctx.hpp  ctx_t.cpp  factor.cpp  factor.hpp  reader.cpp  reader.hpp  ref_center.cpp  ref_center.hpp  stg.cpp  stg.hpp
ctptrader/core/test/: account.csv  underlying.csv
ctptrader/quant/: CMakeLists.txt  factor.cpp  factor.hpp
ctptrader/service/: CMakeLists.txt  dataService.cpp  dataService.hpp  ref.cpp  ref.hpp
ctptrader/util/: CMakeLists.txt  atomicops.h  channel.cpp  channel.hpp  channel_t.cpp  csvReader.cpp  csvReader.hpp  csvReader_t.cpp  ddbReader.cpp  ddbReader.hpp  httpClient.cpp  httpClient.hpp  proxy.cpp  proxy.hpp  readerwritercircularbuffer.h
ctptrader/util/test/: test.csv
dat/: instrument.csv
demo/: config.toml  logger.hpp  main_so.cpp
demo/logger/: CMakeLists.txt  config.toml  logger.hpp  main_so.cpp
test/: CMakeLists.txt  core_test.cpp  data_ref_test.cpp  serviceTest.cpp  timestampTest.cpp  util_test.cpp
test/fixtures/: calendar.csv
